--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
         <img id="lightboxImage" class="lightbox-content">
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
