--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="certificate" onclick="openLightbox('certificate3.jpg')">
             <img src="images/certificate3.jpg" alt="Certificate 3">
             <p>GIS Training</p>
+        </div>
         <div class="certificate" onclick="openLightbox('certificate4.jpg')">
             <img src="images/certificate4.jpg" alt="Certificate 4">
             <p>Conference Participation</p>
